--- a/option1.ipynb
+++ b/option1.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "251f36dc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing python packages\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "780275c0",
    "metadata": {},
    "outputs": [
@@ -63,11 +64,13 @@
     }
    ],
    "source": [
+    "# Importing csvs using Panda\n",
     "inputHarrisPartI = pd.read_csv(\"Option 1/HarrisPartI.csv\", index_col=False)\n",
     "inputHarrisPartIII = pd.read_csv(\"Option 1/HarrisPartIII.csv\", index_col=False)\n",
     "inputKrause21 = pd.read_csv(\"Option 1/Krause21.csv\", index_col=False)\n",
     "inputVandenBerg = pd.read_csv(\"Option 1/vandenBerg_table2.csv\", index_col=False)\n",
     "\n",
+    "# Printing csv for Harris Part I\n",
     "print(inputHarrisPartI)\n"
    ]
   }
