--- a/option1.ipynb
+++ b/option1.ipynb
@@ -11,10 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "251f36dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing python packages\n",
     "import numpy as np\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "780275c0",
    "metadata": {},
    "outputs": [
@@ -33,6 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "HarrisPartI\n",
       "            ID    Name           RA          DEC       L      B  R_Sun  R_gc  \\\n",
       "0      NGC 104  47 Tuc  00:24:05.67  -72:04:52.6  305.89 -44.89    4.5   7.4   \n",
       "1      NGC 288     NaN  00:52:45.24  -26:34:57.4  152.30 -89.38    8.9  12.0   \n",
@@ -59,7 +68,164 @@
       "155   1.0  19.1 -17.6  \n",
       "156   7.0   9.4 -23.5  \n",
       "\n",
-      "[157 rows x 11 columns]\n"
+      "[157 rows x 11 columns]\n",
+      "HarrisPartIII\n",
+      "            ID    v_r  v_r_e  v_LSR  sig_v  sig_v_e     c   r_c   r_h   mu_V  \\\n",
+      "0      NGC 104  -18.0    0.1  -26.7   11.0      0.3  2.07  0.36  3.17  14.38   \n",
+      "1      NGC 288  -45.4    0.2  -51.9    2.9      0.3  0.99  1.35  2.23  20.05   \n",
+      "2      NGC 362  223.5    0.5  214.0    6.4      0.3  1.76  0.18  0.82  14.80   \n",
+      "3    Whiting 1 -130.6    1.8 -138.1    NaN      NaN  0.55  0.25  0.22    NaN   \n",
+      "4     NGC 1261   68.2    4.6   54.9    NaN      NaN  1.16  0.35  0.68  17.73   \n",
+      "..         ...    ...    ...    ...    ...      ...   ...   ...   ...    ...   \n",
+      "152   NGC 7089   -5.3    2.0    3.8    8.2      0.6  1.59  0.32  1.06  15.78   \n",
+      "153   NGC 7099 -184.2    0.2 -179.6    5.5      0.4  2.50  0.06  1.03  15.35   \n",
+      "154     Pal 12   27.8    1.5   32.5    NaN      NaN  2.98  0.02  1.72  19.21   \n",
+      "155     Pal 13   25.2    0.3   30.9    0.9      0.3  0.66  0.48  0.36  24.31   \n",
+      "156   NGC 7492 -177.5    0.6 -176.2    1.2      1.0  0.72  0.86  1.15  20.68   \n",
+      "\n",
+      "     rho_0  lg_tc  lg_th  \n",
+      "0     4.88   7.84   9.55  \n",
+      "1     1.78   8.99   9.32  \n",
+      "2     4.74   7.76   8.93  \n",
+      "3      NaN    NaN   7.93  \n",
+      "4     2.99   8.59   9.12  \n",
+      "..     ...    ...    ...  \n",
+      "152   4.00   8.48   9.40  \n",
+      "153   5.01   6.37   8.88  \n",
+      "154   3.64   5.22   9.28  \n",
+      "155   0.16   8.36   8.35  \n",
+      "156   1.27   9.60   9.44  \n",
+      "\n",
+      "[157 rows x 13 columns]\n",
+      "Krause21\n",
+      "   Class       Object     AltName  Mstar     rh     C5    Age   FeH\n",
+      "0     GC       NGC104       47Tuc   6.46   7.10  0.920  12.80 -0.76\n",
+      "1     GC       NGC288    Melotte3   0.46   9.80  0.050  12.20 -1.32\n",
+      "2     GC       NGC362    Dunlop62   2.50   3.50  0.720  10.00 -1.26\n",
+      "3     GC      NGC1261  Caldwell87   3.41   5.50  0.620  10.24 -1.08\n",
+      "4     GC      NGC1851   Dunlop508   5.51   3.05  1.810   7.64 -1.13\n",
+      "..   ...          ...         ...    ...    ...    ...    ...   ...\n",
+      "56    GC      NGC7089          M2   5.75   6.03  0.950  11.80 -1.31\n",
+      "57    GC      NGC7099         M30   1.45   4.10  0.350  14.60 -2.33\n",
+      "58    GC  Ruprecht106        NONE   0.68  11.00  0.060  12.00 -1.50\n",
+      "59    GC      Terzan7        NONE   0.39   8.70  0.040   7.40 -0.12\n",
+      "60    GC    Palomar12        NONE   0.28  16.00  0.024   8.60 -0.81\n",
+      "\n",
+      "[61 rows x 8 columns]\n",
+      "VandenBerg\n",
+      "    #NGC   Name   FeH    Age  Age_err Method   Figs        Range  HBtype  \\\n",
+      "0    104  47Tuc -0.76  11.75     0.25      V     14  11.50–11.75   -0.99   \n",
+      "1    288   XXXX -1.32  11.50     0.38      H     24          NaN    0.98   \n",
+      "2    362   XXXX -1.30  10.75     0.25      V     13  10.75–11.00   -0.87   \n",
+      "3   1261   XXXX -1.27  10.75     0.25      V     13  10.75–11.25   -0.71   \n",
+      "4   1851   XXXX -1.18  11.00     0.25      V     13  10.75–11.25   -0.32   \n",
+      "5   2808   XXXX -1.18  11.00     0.38      V     13  11.00–11.25   -0.49   \n",
+      "6   3201   XXXX -1.51  11.50     0.38      A  12-30  11.25–11.75    0.08   \n",
+      "7   4147   XXXX -1.78  12.25     0.25      V     11  12.25–12.50    0.66   \n",
+      "8   4590    M68 -2.27  12.00     0.25      V     11        12.00    0.17   \n",
+      "9   4833   XXXX -1.89  12.50     0.50      A     30          NaN    0.93   \n",
+      "10  5024    M53 -2.06  12.25     0.25      V     12  12.25–12.50    0.81   \n",
+      "11  5053   XXXX -2.30  12.25     0.38      A     12  12.25–12.50    0.52   \n",
+      "12  5272     M3 -1.50  11.75     0.25      V     22          NaN    0.08   \n",
+      "13  5286   XXXX -1.70  12.50     0.38      A  12-30  11.75–12.25    0.80   \n",
+      "14  5466   XXXX -2.31  12.50     0.25      V  11-30  12.25–12.50    0.58   \n",
+      "15  5904     M5 -1.33  11.50     0.25      V      8  11.50–11.75    0.31   \n",
+      "16  5927   XXXX -0.29  10.75     0.38      V     16  10.50–10.75   -1.00   \n",
+      "17  5986   XXXX -1.63  12.25     0.75      A     30          NaN    0.97   \n",
+      "18  6101   XXXX -1.98  12.25     0.50      H     30          NaN    0.84   \n",
+      "19  6121     M4 -1.18  11.50     0.38      V     13  11.25–11.50   -0.06   \n",
+      "20  6144   XXXX -1.82  12.75     0.50      H     30          NaN    1.00   \n",
+      "21  6171   M107 -1.03  12.00     0.75      V     13          NaN   -0.73   \n",
+      "22  6205    M13 -1.58  12.00     0.38      A  20-22          NaN    0.97   \n",
+      "23  6218    M12 -1.33  13.00     0.50      A  24-26          NaN    0.98   \n",
+      "24  6254    M10 -1.57  11.75     0.38      H     30          NaN    0.98   \n",
+      "25  6304   XXXX -0.37  11.25     0.38      V     16  11.00–11.25   -1.00   \n",
+      "26  6341    M92 -2.35  12.75     0.25      V     11  12.75–13.25    0.91   \n",
+      "27  6352   XXXX -0.62  10.75     0.38      V     16  10.50–11.00   -1.00   \n",
+      "28  6362   XXXX -1.07  12.50     0.25      V     13  12.25–12.75   -0.58   \n",
+      "29  6366   XXXX -0.59  11.00     0.50      V     16        11.00   -0.97   \n",
+      "30  6397   XXXX -1.99  13.00     0.25      A     30        13.00    0.98   \n",
+      "31  6496   XXXX -0.46  10.75     0.38      V     16  10.50–10.75   -1.00   \n",
+      "32  6535   XXXX -1.79  12.75     0.50      V     32          NaN    1.00   \n",
+      "33  6541   XXXX -1.82  12.50     0.50      H     30          NaN    1.00   \n",
+      "34  6584   XXXX -1.50  11.75     0.25      A  12-30          NaN   -0.15   \n",
+      "35  6624   XXXX -0.42  11.25     0.50      V     16  11.00–11.25   -1.00   \n",
+      "36  6637    M69 -0.59  11.00     0.38      V     16  11.00–11.25   -1.00   \n",
+      "37  6652   XXXX -0.76  11.25     0.25      V     16  11.00–11.25   -1.00   \n",
+      "38  6656    M22 -1.70  12.50     0.50      H     30          NaN    0.91   \n",
+      "39  6681    M70 -1.62  12.75     0.38      A  30-32          NaN    0.96   \n",
+      "40  6715    M54 -1.44  11.75     0.50      V     32          NaN    0.54   \n",
+      "41  6717   XXXX -1.26  12.50     0.50      V     13          NaN    0.98   \n",
+      "42  6723   XXXX -1.10  12.50     0.25      V     13  12.25–12.75   -0.08   \n",
+      "43  6752   XXXX -1.55  12.50     0.25      A     30          NaN    1.00   \n",
+      "44  6779    M56 -2.00  12.75     0.50      H     30          NaN    0.98   \n",
+      "45  6809    M55 -1.93  13.00     0.25      A  12-30  12.75–13.25    0.87   \n",
+      "46  6838    M71 -0.82  11.00     0.38      V     16        11.00   -1.00   \n",
+      "47  6934   XXXX -1.56  11.75     0.25      V  12-30  11.50–12.00    0.25   \n",
+      "48  6981    M72 -1.48  11.50     0.25      V  12-30  11.25–11.75    0.14   \n",
+      "49  7078    M15 -2.33  12.75     0.25      V     11  12.50–12.75    0.67   \n",
+      "50  7089     M2 -1.66  11.75     0.25      A  12-30  11.50–11.75    0.92   \n",
+      "51  7099    M30 -2.33  13.00     0.25      A  11-30  12.75–13.00    0.89   \n",
+      "52  XXXX  Arp21 -1.74  12.00     0.38      V     32          NaN    0.53   \n",
+      "53  XXXX  Pal12 -0.81   9.00     0.38      V     32          NaN   -1.00   \n",
+      "54  XXXX   Ter8 -2.34  13.00     0.38      V     32          NaN    1.00   \n",
+      "\n",
+      "     R_G   M_V  v_e0  log_sigma_0  \n",
+      "0    7.4 -9.42  54.8        5.061  \n",
+      "1   12.0 -6.75  10.9        2.953  \n",
+      "2    9.4 -8.43  44.4        4.938  \n",
+      "3   18.1 -7.80  23.6        3.913  \n",
+      "4   16.6 -8.33  47.6        5.136  \n",
+      "5   11.1 -9.39  62.4        5.070  \n",
+      "6    8.8 -7.45  17.9        3.599  \n",
+      "7   21.4 -6.17  14.2        3.886  \n",
+      "8   10.2 -7.37  16.9        3.559  \n",
+      "9    7.0 -8.17  25.0        3.885  \n",
+      "10  18.4 -8.71  25.8        3.866  \n",
+      "11  17.8 -6.76   7.2        2.196  \n",
+      "12  12.0 -8.88  32.1        4.254  \n",
+      "13   8.9 -8.74  42.7        4.628  \n",
+      "14  16.3 -6.98   8.6        2.453  \n",
+      "15   6.2 -8.81  37.0        4.457  \n",
+      "16   4.6 -7.81  25.4        4.156  \n",
+      "17   4.8 -8.44  33.1        4.259  \n",
+      "18  11.2 -6.94  11.8        2.980  \n",
+      "19   5.9 -7.19  20.8        4.070  \n",
+      "20   2.7 -6.85  10.4        2.975  \n",
+      "21   3.3 -7.12  18.2        3.832  \n",
+      "22   8.4 -8.56  31.7        4.219  \n",
+      "23   4.5 -7.31  21.2        3.961  \n",
+      "24   4.6 -7.48  23.9        4.112  \n",
+      "25   2.3 -7.30  28.8        4.656  \n",
+      "26   9.6 -8.21  35.8        4.618  \n",
+      "27   3.3 -6.47  14.6        3.592  \n",
+      "28   5.1 -6.95  13.5        3.261  \n",
+      "29   5.0 -5.74   9.8        3.135  \n",
+      "30   6.0 -6.64  35.9        5.759  \n",
+      "31   4.2 -7.20  16.7        3.459  \n",
+      "32   3.9 -4.75   8.2        3.327  \n",
+      "33   2.1 -8.52  46.3        5.019  \n",
+      "34   7.0 -7.69  24.7        4.112  \n",
+      "35   1.2 -7.49  26.2        4.869  \n",
+      "36   1.7 -7.64  27.7        4.308  \n",
+      "37   2.7 -6.66  23.9        4.583  \n",
+      "38   4.9 -8.50  33.9        4.311  \n",
+      "39   2.2 -7.12  29.3        5.210  \n",
+      "40  18.9 -9.98  59.7        4.968  \n",
+      "41   2.4 -5.66  16.3        4.458  \n",
+      "42   2.6 -7.83  21.9        3.755  \n",
+      "43   5.2 -7.73  24.5        4.655  \n",
+      "44   9.2 -7.41  20.8        3.905  \n",
+      "45   3.9 -7.57  18.3        3.515  \n",
+      "46   6.7 -5.61  13.0        3.746  \n",
+      "47  12.8 -7.45  21.6        3.998  \n",
+      "48  12.9 -7.04  13.9        3.304  \n",
+      "49  10.4 -9.19  41.6        4.827  \n",
+      "50  10.4 -9.03  41.8        4.531  \n",
+      "51   7.1 -7.45  25.4        4.831  \n",
+      "52  21.4 -5.29   3.5        1.545  \n",
+      "53  15.8 -4.47   4.3        3.297  \n",
+      "54  19.4 -5.07   4.3        1.938  \n"
      ]
     }
    ],
@@ -70,14 +236,25 @@
     "inputKrause21 = pd.read_csv(\"Option 1/Krause21.csv\", index_col=False)\n",
     "inputVandenBerg = pd.read_csv(\"Option 1/vandenBerg_table2.csv\", index_col=False)\n",
     "\n",
-    "# Printing csv for Harris Part I\n",
-    "print(inputHarrisPartI)\n"
+    "# Printing csv for Harris Part I with a header\n",
+    "print(\"HarrisPartI\")\n",
+    "print(inputHarrisPartI)\n",
+    "# Printing csv for Harris Part III with a header\n",
+    "print(\"HarrisPartIII\")\n",
+    "print(inputHarrisPartIII)\n",
+    "# Printing csv for Krause21 with a header\n",
+    "print(\"Krause21\")\n",
+    "print(inputKrause21)\n",
+    "# Printing csv for VandenBerg with a header\n",
+    "print(\"VandenBerg\")\n",
+    "print(inputVandenBerg)\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "COMP9517",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
