Minor colour modifications to headers

--- a/option1.ipynb
+++ b/option1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "780275c0",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HarrisPartI\n",
+      "\u001b[31mHarrisPartI\u001b[0m\n",
       "            ID    Name           RA          DEC       L      B  R_Sun  R_gc  \\\n",
       "0      NGC 104  47 Tuc  00:24:05.67  -72:04:52.6  305.89 -44.89    4.5   7.4   \n",
       "1      NGC 288     NaN  00:52:45.24  -26:34:57.4  152.30 -89.38    8.9  12.0   \n",
@@ -69,7 +69,9 @@
       "156   7.0   9.4 -23.5  \n",
       "\n",
       "[157 rows x 11 columns]\n",
-      "HarrisPartIII\n",
+      "\n",
+      "\n",
+      "\u001b[31mHarrisPartIII\u001b[0m\n",
       "            ID    v_r  v_r_e  v_LSR  sig_v  sig_v_e     c   r_c   r_h   mu_V  \\\n",
       "0      NGC 104  -18.0    0.1  -26.7   11.0      0.3  2.07  0.36  3.17  14.38   \n",
       "1      NGC 288  -45.4    0.2  -51.9    2.9      0.3  0.99  1.35  2.23  20.05   \n",
@@ -97,7 +99,9 @@
       "156   1.27   9.60   9.44  \n",
       "\n",
       "[157 rows x 13 columns]\n",
-      "Krause21\n",
+      "\n",
+      "\n",
+      "\u001b[31mKrause21\u001b[0m\n",
       "   Class       Object     AltName  Mstar     rh     C5    Age   FeH\n",
       "0     GC       NGC104       47Tuc   6.46   7.10  0.920  12.80 -0.76\n",
       "1     GC       NGC288    Melotte3   0.46   9.80  0.050  12.20 -1.32\n",
@@ -112,7 +116,9 @@
       "60    GC    Palomar12        NONE   0.28  16.00  0.024   8.60 -0.81\n",
       "\n",
       "[61 rows x 8 columns]\n",
-      "VandenBerg\n",
+      "\n",
+      "\n",
+      "\u001b[31mVandenBerg\u001b[0m\n",
       "    #NGC   Name   FeH    Age  Age_err Method   Figs        Range  HBtype  \\\n",
       "0    104  47Tuc -0.76  11.75     0.25      V     14  11.50–11.75   -0.99   \n",
       "1    288   XXXX -1.32  11.50     0.38      H     24          NaN    0.98   \n",
@@ -236,17 +242,23 @@
     "inputKrause21 = pd.read_csv(\"Option 1/Krause21.csv\", index_col=False)\n",
     "inputVandenBerg = pd.read_csv(\"Option 1/vandenBerg_table2.csv\", index_col=False)\n",
     "\n",
-    "# Printing csv for Harris Part I with a header\n",
-    "print(\"HarrisPartI\")\n",
+    "# Printing csv for Harris Part I with a header in red colour\n",
+    "print(\"\\033[31mHarrisPartI\\033[0m\")\n",
     "print(inputHarrisPartI)\n",
-    "# Printing csv for Harris Part III with a header\n",
-    "print(\"HarrisPartIII\")\n",
+    "# Printing csv for Harris Part III with a header in red colour\n",
+    "print()\n",
+    "print()\n",
+    "print(\"\\033[31mHarrisPartIII\\033[0m\")\n",
     "print(inputHarrisPartIII)\n",
-    "# Printing csv for Krause21 with a header\n",
-    "print(\"Krause21\")\n",
+    "# Printing csv for Krause21 with a header in red colour\n",
+    "print()\n",
+    "print()\n",
+    "print(\"\\033[31mKrause21\\033[0m\")\n",
     "print(inputKrause21)\n",
-    "# Printing csv for VandenBerg with a header\n",
-    "print(\"VandenBerg\")\n",
+    "# Printing csv for VandenBerg with a header in red colour\n",
+    "print()\n",
+    "print()\n",
+    "print(\"\\033[31mVandenBerg\\033[0m\")\n",
     "print(inputVandenBerg)\n",
     "\n"
    ]
