Most of the table keys identified

--- a/option1.ipynb
+++ b/option1.ipynb
@@ -254,6 +254,88 @@
     "print(inputVandenBerg)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b68f5f",
+   "metadata": {},
+   "source": [
+    "https://physics.mcmaster.ca/~harris/mwgc.dat\n",
+    "\n",
+    "###  Part I:  Identifications and Positional Data\n",
+    "\n",
+    "| Key | Meaning |\n",
+    "| --- | ---------------------|\n",
+    "| ID | Cluster identification number |\n",
+    "| Name | Other commonly used cluster name |\n",
+    "| RA , DEC | Right ascension and declination (epoch J2000) |\n",
+    "| L , B | Galactic longitude and latitude (degrees) |\n",
+    "| R_Sun | Distance from Sun (kiloparsecs) |\n",
+    "|R_gc | Distance from Galactic center (kpc), assuming R_0=8.0 kpc\n",
+    "| X, Y, Z | Galactic distance components X,Y,Z in kiloparsecs, in a Sun-centered coordinate system; X points toward Galactic center, Y in direction of Galactic rotation, Z toward North Galactic Pole |\n",
+    "\n",
+    "###  Part II:  Metallicity and Photometry\n",
+    "(NOTE: This data wasn't provided on Moodle, though we can still use it if we'd like to. It can be found in the link above)\n",
+    "\n",
+    "| Key | Meaning |\n",
+    "| --- | ---------------------|\n",
+    "| ID | Cluster identification |\n",
+    "| [Fe/H] | Metallicity [Fe/H] |\n",
+    "| wt | Weight of mean metallicity; essentially the number of independent [Fe/H] measurements averaged together.  See bibliography for full description |\n",
+    "| E(B-V) | Foreground reddening |\n",
+    "| V_HB | V magnitude level of the horizontal branch (or RR Lyraes) |\n",
+    "| (m-M)V | Apparent visual distance modulus |\n",
+    "| V_t | Integrated V magnitude of the cluster |\n",
+    "| M_V,t | Absolute visual magnitude (cluster luminosity),  M_V,t = V_t - (m-M)V |\n",
+    "| U-B   B-V   V-R   V-I | Integrated color indices (uncorrected for reddening) |\n",
+    "| spt | Spectral type of the integrated cluster light |\n",
+    "| ellip | Projected ellipticity of isophotes, e = 1-(b/a) |\n",
+    "\n",
+    "### Part III:  Velocities and Structural Parameters\n",
+    "\n",
+    "| Key | Meaning |\n",
+    "| --- | ---------------------|\n",
+    "| ID | Cluster identification |\n",
+    "| v_r | Heliocentric radial velocity (km/s) |\n",
+    "| +/- | Observational (internal) uncertainty in radial velocity |\n",
+    "| v_LSR | Radial velocity relative to Solar neighborhood LSR |\n",
+    "| sig_v | Central velocity dispersion sig_v (km/s) |\n",
+    "| +/- | Observational (internal) uncertainty in velocity dispersion |\n",
+    "| c | King-model central concentration, c = log(r_t/r_c); a 'c' denotes a core-collapsed cluster |\n",
+    "| r_c | Core radius in arcmin |\n",
+    "| r_h | Half-light radius in arcmin |\n",
+    "| mu_V | Central surface brightness, V magnitudes per square arcsecond |\n",
+    "| rho_0 | Central luminosity density, log_10(Solar luminosities per cubic parsec) |\n",
+    "| lg(tc) | Core relaxation time t(r_c), in log_10(years) |\n",
+    "| lg(th) | Median relaxation time t(r_h), in log_10(years) |\n",
+    "\n",
+    "### vandenBerg_table2\n",
+    "\n",
+    "https://arxiv.org/pdf/1308.2257\n",
+    "\n",
+    "(page 48)\n",
+    "| Key | Meaning |\n",
+    "| --- | --------------------- |\n",
+    "| NGC | Cluster identification |\n",
+    "| Name | |\n",
+    "| FeH | adopted [Fe/H] values |\n",
+    "| Age | |\n",
+    "| Age_err | |\n",
+    "| Method | whether the adopted age is based primarly on the vertical, or the horizontal, method |\n",
+    "| Figs |\n",
+    "| Range |\n",
+    "| HBtype | HB type (from Mackey & van den Bergh 2005) |\n",
+    "| R_G | Galactocentric distance (in kpc) |\n",
+    "| M_V | absolute integrated visual magnitude |\n",
+    "| v_e0 | the central escape velocity (in km/s) |\n",
+    "| log_sigma_0 | the common logarithm of surface density of stars at the cluster center (in M./pc2) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1599a9ba",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
