--- a/option1.ipynb
+++ b/option1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "780275c0",
    "metadata": {},
    "outputs": [
@@ -251,8 +251,7 @@
     "print()\n",
     "print()\n",
     "print(\"\\033[31mVandenBerg\\033[0m\")\n",
-    "print(inputVandenBerg)\n",
-    "\n"
+    "print(inputVandenBerg)"
    ]
   },
   {
@@ -332,10 +331,247 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1599a9ba",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f17ca1",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows inputHarrisPartI: 157\n",
+      "Rows inputHarrisPartIII: 157\n",
+      "Rows inputKrause21: 61\n",
+      "Rows inputVandenBerg: 55\n",
+      "Merge 1, Rows: 157\n",
+      "Merge 2, Rows: 59\n",
+      "0          NGC 104\n",
+      "1          NGC 288\n",
+      "2          NGC 362\n",
+      "3         NGC 1261\n",
+      "4         NGC 1851\n",
+      "          ...     \n",
+      "56        NGC 7089\n",
+      "57        NGC 7099\n",
+      "58    Ruprecht 106\n",
+      "59        Terzan 7\n",
+      "60      Palomar 12\n",
+      "Name: Object, Length: 61, dtype: object\n",
+      "Merge 3, Rows: 51\n",
+      "          ID    Name           RA          DEC       L      B  R_Sun  R_gc  \\\n",
+      "0    NGC 104  47 Tuc  00:24:05.67  -72:04:52.6  305.89 -44.89    4.5   7.4   \n",
+      "1    NGC 288     NaN  00:52:45.24  -26:34:57.4  152.30 -89.38    8.9  12.0   \n",
+      "2    NGC 362     NaN  01:03:14.26  -70:50:55.6  301.53 -46.25    8.6   9.4   \n",
+      "3   NGC 1261     NaN  03:12:16.21  -55:12:58.4  270.54 -52.12   16.3  18.1   \n",
+      "4   NGC 1851     NaN  05:14:06.76  -40:02:47.6  244.51 -35.03   12.1  16.6   \n",
+      "5   NGC 2808     NaN  09:12:03.10  -64:51:48.6  282.19 -11.25    9.6  11.1   \n",
+      "6   NGC 3201     NaN  10:17:36.82  -46:24:44.9  277.23   8.64    4.9   8.8   \n",
+      "7   NGC 4590    M 68  12:39:27.98  -26:44:38.6  299.63  36.05   10.3  10.2   \n",
+      "8   NGC 4833     NaN  12:59:33.92  -70:52:35.4  303.60  -8.02    6.6   7.0   \n",
+      "9   NGC 5024    M 53  13:12:55.25  +18:10:05.4  332.96  79.76   17.9  18.4   \n",
+      "10  NGC 5053     NaN  13:16:27.09  +17:42:00.9  335.70  78.95   17.4  17.8   \n",
+      "11  NGC 5272     M 3  13:42:11.62  +28:22:38.2   42.22  78.71   10.2  12.0   \n",
+      "12  NGC 5286     NaN  13:46:26.81  -51:22:27.3  311.61  10.57   11.7   8.9   \n",
+      "13  NGC 5466     NaN  14:05:27.29  +28:32:04.0   42.15  73.59   16.0  16.3   \n",
+      "14  NGC 5904     M 5  15:18:33.22  +02:04:51.7    3.86  46.80    7.5   6.2   \n",
+      "15  NGC 5927     NaN  15:28:00.69  -50:40:22.9  326.60   4.86    7.7   4.6   \n",
+      "16  NGC 5986     NaN  15:46:03.00  -37:47:11.1  337.02  13.27   10.4   4.8   \n",
+      "17  NGC 6121     M 4  16:23:35.22  -26:31:32.7  350.97  15.97    2.2   5.9   \n",
+      "18  NGC 6101     NaN  16:25:48.12  -72:12:07.9  317.74 -15.82   15.4  11.2   \n",
+      "19  NGC 6144     NaN  16:27:13.86  -26:01:24.6  351.93  15.70    8.9   2.7   \n",
+      "20  NGC 6171   M 107  16:32:31.86  -13:03:13.6    3.37  23.01    6.4   3.3   \n",
+      "21  NGC 6205    M 13  16:41:41.24  +36:27:35.5   59.01  40.91    7.1   8.4   \n",
+      "22  NGC 6218    M 12  16:47:14.18  -01:56:54.7   15.72  26.31    4.8   4.5   \n",
+      "23  NGC 6254    M 10  16:57:09.05  -04:06:01.1   15.14  23.08    4.4   4.6   \n",
+      "24  NGC 6304     NaN  17:14:32.25  -29:27:43.3  355.83   5.38    5.9   2.3   \n",
+      "25  NGC 6341    M 92  17:17:07.39  +43:08:09.4   68.34  34.86    8.3   9.6   \n",
+      "26  NGC 6352     NaN  17:25:29.11  -48:25:19.8  341.42  -7.17    5.6   3.3   \n",
+      "27  NGC 6366     NaN  17:27:44.24  -05:04:47.5   18.41  16.04    3.5   5.0   \n",
+      "28  NGC 6362     NaN  17:31:54.99  -67:02:54.0  325.55 -17.57    7.6   5.1   \n",
+      "29  NGC 6397     NaN  17:40:42.09  -53:40:27.6  338.17 -11.96    2.3   6.0   \n",
+      "30  NGC 6496     NaN  17:59:03.68  -44:15:57.4  348.03 -10.01   11.3   4.2   \n",
+      "31  NGC 6535     NaN  18:03:50.51  -00:17:51.5   27.18  10.44    6.8   3.9   \n",
+      "32  NGC 6541     NaN  18:08:02.36  -43:42:53.6  349.29 -11.19    7.5   2.1   \n",
+      "33  NGC 6584     NaN  18:18:37.60  -52:12:56.8  342.14 -16.41   13.5   7.0   \n",
+      "34  NGC 6624     NaN  18:23:40.51  -30:21:39.7    2.79  -7.91    7.9   1.2   \n",
+      "35  NGC 6637    M 69  18:31:23.10  -32:20:53.1    1.72 -10.27    8.8   1.7   \n",
+      "36  NGC 6652     NaN  18:35:45.63  -32:59:26.6    1.53 -11.38   10.0   2.7   \n",
+      "37  NGC 6656    M 22  18:36:23.94  -23:54:17.1    9.89  -7.55    3.2   4.9   \n",
+      "38  NGC 6681    M 70  18:43:12.76  -32:17:31.6    2.85 -12.51    9.0   2.2   \n",
+      "39  NGC 6715    M 54  18:55:03.33  -30:28:47.5    5.61 -14.09   26.5  18.9   \n",
+      "40  NGC 6717   Pal 9  18:55:06.04  -22:42:05.3   12.88 -10.90    7.1   2.4   \n",
+      "41  NGC 6723     NaN  18:59:33.15  -36:37:56.1    0.07 -17.30    8.7   2.6   \n",
+      "42  NGC 6752     NaN  19:10:52.11  -59:59:04.4  336.49 -25.63    4.0   5.2   \n",
+      "43  NGC 6779    M 56  19:16:35.57  +30:11:00.5   62.66   8.34    9.4   9.2   \n",
+      "44  NGC 6809    M 55  19:39:59.71  -30:57:53.1    8.79 -23.27    5.4   3.9   \n",
+      "45  NGC 6838    M 71  19:53:46.49  +18:46:45.1   56.75  -4.56    4.0   6.7   \n",
+      "46  NGC 6934     NaN  20:34:11.37  +07:24:16.1   52.10 -18.89   15.6  12.8   \n",
+      "47  NGC 6981    M 72  20:53:27.70  -12:32:14.3   35.16 -32.68   17.0  12.9   \n",
+      "48  NGC 7078    M 15  21:29:58.33  +12:10:01.2   65.01 -27.31   10.4  10.4   \n",
+      "49  NGC 7089     M 2  21:33:27.02  -00:49:23.7   53.37 -35.77   11.5  10.4   \n",
+      "50  NGC 7099    M 30  21:40:22.12  -23:10:47.5   27.18 -46.84    8.1   7.1   \n",
+      "\n",
+      "       X     Y  ...  sig_v_e     c   r_c   r_h   mu_V  rho_0  lg_tc  lg_th  \\\n",
+      "0    1.9  -2.6  ...      0.3  2.07  0.36  3.17  14.38   4.88   7.84   9.55   \n",
+      "1   -0.1   0.0  ...      0.3  0.99  1.35  2.23  20.05   1.78   8.99   9.32   \n",
+      "2    3.1  -5.1  ...      0.3  1.76  0.18  0.82  14.80   4.74   7.76   8.93   \n",
+      "3    0.1 -10.0  ...      NaN  1.16  0.35  0.68  17.73   2.99   8.59   9.12   \n",
+      "4   -4.2  -8.9  ...      0.5  1.86  0.09  0.51  14.25   5.09   7.43   8.82   \n",
+      "5    2.0  -9.2  ...      1.2  1.56  0.25  0.80  15.08   4.66   8.24   9.15   \n",
+      "6    0.6  -4.8  ...      0.2  1.29  1.30  3.10  19.00   2.71   8.61   9.27   \n",
+      "7    4.1  -7.2  ...      0.4  1.41  0.58  1.51  18.81   2.57   8.45   9.27   \n",
+      "8    3.6  -5.4  ...      NaN  1.25  1.00  2.41  18.48   3.00   8.78   9.42   \n",
+      "9    2.8  -1.4  ...      0.9  1.72  0.35  1.31  17.38   3.07   8.73   9.76   \n",
+      "10   3.0  -1.4  ...      0.2  0.74  2.08  2.61  22.03   0.54   9.81   9.87   \n",
+      "11   1.5   1.3  ...      0.3  1.89  0.37  2.31  16.64   3.57   8.31   9.79   \n",
+      "12   7.6  -8.6  ...      1.0  1.41  0.28  0.73  16.22   4.10   8.40   9.11   \n",
+      "13   3.3   3.0  ...      0.2  1.04  1.43  2.30  21.61   0.84   9.35   9.76   \n",
+      "14   5.1   0.3  ...      0.4  1.73  0.44  1.77  16.09   3.88   8.28   9.41   \n",
+      "15   6.4  -4.2  ...      NaN  1.60  0.42  1.10  16.91   4.09   8.39   8.94   \n",
+      "16   9.3  -4.0  ...      NaN  1.23  0.47  0.98  17.67   3.41   8.58   9.18   \n",
+      "17   2.1  -0.3  ...      0.2  1.65  1.16  4.33  17.95   3.64   7.90   8.93   \n",
+      "18  11.0 -10.0  ...      NaN  0.80  0.97  1.05  20.29   1.65   9.21   9.22   \n",
+      "19   8.5  -1.2  ...      NaN  1.55  0.94  1.63  20.05   2.31   8.78   9.14   \n",
+      "20   5.9   0.3  ...      0.3  1.53  0.56  1.73  18.94   3.08   8.06   9.00   \n",
+      "21   2.8   4.6  ...      0.4  1.53  0.62  1.69  16.59   3.55   8.51   9.30   \n",
+      "22   4.2   1.2  ...      0.4  1.34  0.79  1.77  18.10   3.23   8.19   8.87   \n",
+      "23   3.9   1.1  ...      0.8  1.38  0.77  1.95  17.70   3.54   8.21   8.90   \n",
+      "24   5.8  -0.4  ...      NaN  1.80  0.21  1.42  17.20   4.49   7.36   8.85   \n",
+      "25   2.5   6.3  ...      0.4  1.68  0.26  1.02  15.47   4.30   7.96   9.02   \n",
+      "26   5.3  -1.8  ...      NaN  1.10  0.83  2.05  18.17   3.17   8.46   8.92   \n",
+      "27   3.2   1.1  ...      0.5  0.74  2.17  2.92  21.25   2.39   8.74   8.73   \n",
+      "28   6.0  -4.1  ...      0.4  1.09  1.13  2.05  19.31   2.29   8.80   9.20   \n",
+      "29   2.1  -0.8  ...      0.2  2.50  0.05  2.90  15.47   5.76   4.94   8.60   \n",
+      "30  10.9  -2.3  ...      NaN  0.70  0.95  1.02  20.17   1.99   8.94   9.04   \n",
+      "31   6.0   3.1  ...      0.5  1.33  0.36  0.85  21.26   2.34   7.28   8.20   \n",
+      "32   7.3  -1.4  ...      2.1  1.86  0.18  1.06  15.44   4.65   7.55   9.03   \n",
+      "33  12.3  -4.0  ...      NaN  1.47  0.26  0.73  17.63   3.33   8.13   9.02   \n",
+      "34   7.8   0.4  ...      0.5  2.50  0.06  0.82  15.32   5.30   6.61   8.71   \n",
+      "35   8.6   0.3  ...      NaN  1.38  0.33  0.84  16.82   3.84   8.15   8.82   \n",
+      "36   9.8   0.3  ...      NaN  1.80  0.10  0.48  16.10   4.48   7.05   8.39   \n",
+      "37   3.2   0.6  ...      0.3  1.38  1.33  3.36  17.42   3.63   8.53   9.23   \n",
+      "38   8.8   0.4  ...      0.5  2.50  0.03  0.71  14.25   5.82   5.82   8.65   \n",
+      "39  25.6   2.5  ...      0.3  2.04  0.09  0.82  14.78   4.69   8.24   9.93   \n",
+      "40   6.8   1.6  ...      NaN  2.07  0.08  0.68  16.77   4.58   6.52   8.22   \n",
+      "41   8.3   0.0  ...      NaN  1.11  0.83  1.53  18.13   2.79   8.79   9.24   \n",
+      "42   3.3  -1.4  ...      0.4  2.50  0.17  1.91  14.88   5.04   6.88   8.87   \n",
+      "43   4.3   8.3  ...      0.6  1.38  0.44  1.10  18.08   3.28   8.33   9.01   \n",
+      "44   4.9   0.8  ...      0.3  0.93  1.80  2.83  19.36   2.22   8.90   9.29   \n",
+      "45   2.2   3.4  ...      0.2  1.15  0.63  1.67  19.75   2.83   7.54   8.43   \n",
+      "46   9.1  11.7  ...      1.1  1.53  0.22  0.69  17.35   3.44   8.20   9.04   \n",
+      "47  11.7   8.3  ...      NaN  1.21  0.46  0.93  19.02   2.38   8.72   9.23   \n",
+      "48   3.9   8.3  ...      0.9  2.29  0.14  1.00  14.21   5.05   7.84   9.32   \n",
+      "49   5.6   7.5  ...      0.6  1.59  0.32  1.06  15.78   4.00   8.48   9.40   \n",
+      "50   4.9   2.5  ...      0.4  2.50  0.06  1.03  15.35   5.01   6.37   8.88   \n",
+      "\n",
+      "      Object      #NGC  \n",
+      "0    NGC 104   NGC 104  \n",
+      "1    NGC 288   NGC 288  \n",
+      "2    NGC 362   NGC 362  \n",
+      "3   NGC 1261  NGC 1261  \n",
+      "4   NGC 1851  NGC 1851  \n",
+      "5   NGC 2808  NGC 2808  \n",
+      "6   NGC 3201  NGC 3201  \n",
+      "7   NGC 4590  NGC 4590  \n",
+      "8   NGC 4833  NGC 4833  \n",
+      "9   NGC 5024  NGC 5024  \n",
+      "10  NGC 5053  NGC 5053  \n",
+      "11  NGC 5272  NGC 5272  \n",
+      "12  NGC 5286  NGC 5286  \n",
+      "13  NGC 5466  NGC 5466  \n",
+      "14  NGC 5904  NGC 5904  \n",
+      "15  NGC 5927  NGC 5927  \n",
+      "16  NGC 5986  NGC 5986  \n",
+      "17  NGC 6121  NGC 6121  \n",
+      "18  NGC 6101  NGC 6101  \n",
+      "19  NGC 6144  NGC 6144  \n",
+      "20  NGC 6171  NGC 6171  \n",
+      "21  NGC 6205  NGC 6205  \n",
+      "22  NGC 6218  NGC 6218  \n",
+      "23  NGC 6254  NGC 6254  \n",
+      "24  NGC 6304  NGC 6304  \n",
+      "25  NGC 6341  NGC 6341  \n",
+      "26  NGC 6352  NGC 6352  \n",
+      "27  NGC 6366  NGC 6366  \n",
+      "28  NGC 6362  NGC 6362  \n",
+      "29  NGC 6397  NGC 6397  \n",
+      "30  NGC 6496  NGC 6496  \n",
+      "31  NGC 6535  NGC 6535  \n",
+      "32  NGC 6541  NGC 6541  \n",
+      "33  NGC 6584  NGC 6584  \n",
+      "34  NGC 6624  NGC 6624  \n",
+      "35  NGC 6637  NGC 6637  \n",
+      "36  NGC 6652  NGC 6652  \n",
+      "37  NGC 6656  NGC 6656  \n",
+      "38  NGC 6681  NGC 6681  \n",
+      "39  NGC 6715  NGC 6715  \n",
+      "40  NGC 6717  NGC 6717  \n",
+      "41  NGC 6723  NGC 6723  \n",
+      "42  NGC 6752  NGC 6752  \n",
+      "43  NGC 6779  NGC 6779  \n",
+      "44  NGC 6809  NGC 6809  \n",
+      "45  NGC 6838  NGC 6838  \n",
+      "46  NGC 6934  NGC 6934  \n",
+      "47  NGC 6981  NGC 6981  \n",
+      "48  NGC 7078  NGC 7078  \n",
+      "49  NGC 7089  NGC 7089  \n",
+      "50  NGC 7099  NGC 7099  \n",
+      "\n",
+      "[51 rows x 25 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking number of rows to determine if dataframe merging causes loss of data\n",
+    "print(\"Rows inputHarrisPartI:\", len(inputHarrisPartI))\n",
+    "print(\"Rows inputHarrisPartIII:\", len(inputHarrisPartIII))\n",
+    "print(\"Rows inputKrause21:\", len(inputKrause21))\n",
+    "print(\"Rows inputVandenBerg:\", len(inputVandenBerg))\n",
+    "\n",
+    "# Merged dataframes\n",
+    "merged = pd.merge(inputHarrisPartI, inputHarrisPartIII, on='ID')\n",
+    "print(\"Merge 1, Rows:\", len(merged))\n",
+    "\n",
+    "\n",
+    "# --------------------------------------------------------------\n",
+    "# Converting inputKrause21.csv 'Object' entries (e.g. \"NGC288\" -> \"NGC 288\", or )\n",
+    "import re\n",
+    "\n",
+    "def convert_object_to_catid(object_str: str):\n",
+    "    return re.sub(\"[0-9]+\", lambda ele: \" \" + ele[0], object_str)\n",
+    "\n",
+    "# # Debugging function\n",
+    "# print(inputKrause21['Object'][1])\n",
+    "# print(inputKrause21['Object'].apply(convert_object_to_catid)[1])\n",
+    "# print(inputKrause21['Object'][60])\n",
+    "# print(inputKrause21['Object'].apply(convert_object_to_catid)[60])\n",
+    "\n",
+    "# ---------------------------------------------------------------\n",
+    "\n",
+    "def convert_ngc_to_catid(object_str: str):\n",
+    "    prefix = \"NGC \"\n",
+    "    return prefix + object_str\n",
+    "\n",
+    "# # Debugging function\n",
+    "# print(inputVandenBerg['#NGC'][1])\n",
+    "# print(inputVandenBerg['#NGC'].apply(convert_ngc_to_catid)[1])\n",
+    "\n",
+    "# ---------------------------------------------------------------\n",
+    "\n",
+    "inputKrause21['Object'] = inputKrause21['Object'].apply(convert_object_to_catid)\n",
+    "\n",
+    "\n",
+    "merged = pd.merge(merged, inputKrause21, left_on='ID', right_on='Object')\n",
+    "print(\"Merge 2, Rows:\", len(merged)) # Lost the Ruprecht106 and Palomar12 rows, which is why 59 rows left instead of 61 \n",
+    "\n",
+    "inputVandenBerg['#NGC'] = inputVandenBerg['#NGC'].apply(convert_ngc_to_catid)\n",
+    "\n",
+    "merged = pd.merge(merged, inputVandenBerg, left_on='ID', right_on='#NGC')\n",
+    "print(\"Merge 3, Rows:\", len(merged)) # Lost the Ruprecht106 and Palomar12 rows, which is why 59 rows left instead of 61\n",
+    "\n",
+    "print(merged)\n"
+   ]
   }
  ],
  "metadata": {
