Comment box suggesting changes to merging code according to discussed considerations.

--- a/option1.ipynb
+++ b/option1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "251f36dc",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "780275c0",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "585a61da",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "Text(0, 0.5, '$Mass$, $Log(M_x/M_sun)$')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "4c0aed43",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "97e72932",
    "metadata": {},
    "outputs": [
@@ -744,22 +744,32 @@
        "\"\\n#As of now we have two NGC-ID columns ('ID' and '#NGC'). If we use the below code we can combine them to one:\\ninputVandenBergConverted.rename(columns={'#NGC': 'ID'}, inplace=True)\\n#In so doing, we would change the merging code to:\\nmerged = pd.merge(merged, inputVandenBergConverted, on='ID')\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "#As of now we have two NGC-ID columns ('ID' and '#NGC'). If we use the below code we can combine them to one:\n",
+    "As of now we have three NGC-ID columns ('ID', '#NGC' and 'Object'), There's also datalines left out because \n",
+    "some GCs are only listed in either VandenBerg or Krause, If we use the below code we can combine them to one:\n",
+    "\n",
+    "Before merge:\n",
     "inputVandenBergConverted.rename(columns={'#NGC': 'ID'}, inplace=True)\n",
-    "#In so doing, we would change the merging code to:\n",
-    "merged = pd.merge(merged, inputVandenBergConverted, on='ID')\"\"\""
+    "inputKrause21Converted.rename(columns={'Object': 'ID'}, inplace=True)\n",
+    "\n",
+    "\n",
+    "After merge:\n",
+    "merged = pd.merge(merged, inputVandenBergConverted, on='ID', how='outer', indicator=True)\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "#The how='outer' makes the merge include the objects only present in one of the dataframes while indicator tells us which dataframe it is from\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "a9c8e304",
    "metadata": {},
    "outputs": [
@@ -862,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb0584d0",
+   "id": "a0316ede",
    "metadata": {},
    "outputs": [],
    "source": []
