Getting room for last push

--- a/option1.ipynb
+++ b/option1.ipynb
@@ -2547,6 +2547,255 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d2ceed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NGC 4147 as well as three unidentified entries (index 59, 60 and 61) do not have a v_LSR or positions in our data\n",
+    "data_pos = data_merged[['ID','RA','DEC','L','B','R_Sun','R_gc','X','Y','Z']]\n",
+    "data_pos_inclusive = data_merged_inclusive[['ID','RA','DEC','L','B','R_Sun','R_gc','X','Y','Z','v_LSR']][~data_merged_inclusive['X'].isna()]\n",
+    "data_vel = data_merged[['ID','v_r','v_r_e','v_LSR','sig_v','sig_v_e','R_G']]\n",
+    "data_vel_inclusive = data_merged_inclusive[['ID','v_r','v_r_e','v_LSR','sig_v','sig_v_e','R_G']][~data_merged_inclusive['v_r'].isna()]\n",
+    "\n",
+    "#print(len(data_vel_inclusive['v_LSR'][sigma1]))\n",
+    "#print(len(data_vel_inclusive['v_LSR'][sigma2]))\n",
+    "\n",
+    "\n",
+    "# v_LSR projected to rotational plane:\n",
+    "\n",
+    "# Using spherical coordinates:\n",
+    "# Z = R * cos(theta)  ==>  theta = arccos(Z/R)\n",
+    "\n",
+    "#R = np.sqrt(data_merged_inclusive['X']**2 + data_merged_inclusive['Y']**2 + data_merged_inclusive['Z']**2)\n",
+    "\n",
+    "data_pos_inclusive['theta'] = np.arccos(data_pos_inclusive['Z']/data_pos_inclusive['R_Sun'])\n",
+    "\n",
+    "data_vel_inclusive['v_LSR_proj'] = data_vel_inclusive['v_LSR']* np.cos(np.pi-data_pos_inclusive['theta'])\n",
+    "\n",
+    "avr = np.mean(data_vel_inclusive['v_LSR_proj'])\n",
+    "s = np.std(data_vel_inclusive['v_LSR_proj'])\n",
+    "\n",
+    "sigma1 = ~((data_vel_inclusive['v_LSR'] <= avr+s) & (data_vel_inclusive['v_LSR'] >= avr-s) | (data_vel_inclusive['v_LSR'].isna()))\n",
+    "sigma2 = ~((data_vel_inclusive['v_LSR'] <= avr+2*s) & (data_vel_inclusive['v_LSR'] >= avr-2*s) | (data_vel_inclusive['v_LSR'].isna()))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "TruthValues = pd.read_csv(\"Option 1/BelokurovKravtsov2023_Table_D1.csv\", index_col=False)\n",
+    "acc = TruthValues['In-situ(1)/Accreted(0)'] == 0\n",
+    "insit = TruthValues['In-situ(1)/Accreted(0)'] == 1\n",
+    "#len(TruthValues[acc])/len(TruthValues[insit])\n",
+    "#len(TruthValues[acc])\n",
+    "\n",
+    "data_vel_inclusive = pd.merge(data_vel_inclusive,TruthValues,left_on='ID', right_on='Cluster name')\n",
+    "\n",
+    "sigma1_proj = ~((data_vel_inclusive['v_LSR_proj'] <= avr+s) & (data_vel_inclusive['v_LSR_proj'] >= avr-s) | (data_vel_inclusive['v_LSR'].isna()))\n",
+    "data_sigma1_proj = data_vel_inclusive[sigma1_proj][['ID','In-situ(1)/Accreted(0)']]\n",
+    "\n",
+    "N_accreted_tot = len(data_vel_inclusive[data_vel_inclusive['In-situ(1)/Accreted(0)'] == 0])\n",
+    "N_accreted_sigma1 = len(data_sigma1_proj[data_sigma1_proj['In-situ(1)/Accreted(0)'] == 0])\n",
+    "\n",
+    "N_accreted_tot - N_accreted_sigma1\n",
+    "#filter = data_vel_inclusive['In-situ(1)/Accreted(0)'] == 0\n",
+    "#len(data_vel_inclusive['In-situ(1)/Accreted(0)'])\n",
+    "\n",
+    "#data_vel_insitu = data_vel_inclusive[data_vel_inclusive['In-situ(1)/Accreted(0)'] == 1]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb5c03e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import FixedLocator\n",
+    "\n",
+    "# Sun's distance to galactic centre ~ 8.186 kpc\n",
+    "\n",
+    "filter = ~data_pos_inclusive['v_LSR'].isna()\n",
+    "#filter = (data_vel_inclusive['ID'] == 'NGC 3201')\n",
+    "#filter = sigma1\n",
+    "#filter = sigma2\n",
+    "\n",
+    "x_min, x_max = -12, 25\n",
+    "y_min, y_max = -15, 20\n",
+    "colors = 'coolwarm'\n",
+    "\n",
+    "n=0\n",
+    "while n < 3:\n",
+    "    filter = ~data_vel_inclusive['v_LSR'].isna()\n",
+    "    cvals = data_vel_inclusive['v_LSR'][filter]\n",
+    "    if n == 1:\n",
+    "        cvals = data_vel_inclusive['v_LSR_proj'][filter]\n",
+    "    if n == 2:\n",
+    "        filter = sigma1_proj\n",
+    "        cvals = data_vel_inclusive['v_LSR'][filter]\n",
+    "\n",
+    "    fig, axes = plt.subplots(1,3, figsize=(15,5))\n",
+    "\n",
+    "    sub1 = axes[0].scatter(\n",
+    "        data_pos_inclusive['X'][filter],\n",
+    "        data_pos_inclusive['Y'][filter],\n",
+    "        c=cvals,\n",
+    "        cmap=colors,\n",
+    "        zorder=2\n",
+    "    )\n",
+    "    axes[0].scatter(0,0,100,marker='*',c='black',zorder=3)\n",
+    "    axes[0].scatter(0,0,45,marker='*',c='gold',label='Sun',zorder=4)\n",
+    "    axes[0].scatter(8,0,45,marker='X',c='black',label='Galactic Centre, ~8.186 kpc from Sun',zorder=4)\n",
+    "    axes[0].set_title('MW Face-On')\n",
+    "    axes[0].set_xlabel(\"X [kpc]; Toward galactic centre\")\n",
+    "    axes[0].set_ylabel('Y [kpc]; \"Toward galactic rotation\"')\n",
+    "\n",
+    "    for i in np.arange(5,26,5):\n",
+    "        axes[0].add_artist(plt.Circle((8,0),i,color='lightgrey',fill=False, zorder=0))\n",
+    "\n",
+    "    axes[0].legend()\n",
+    "\n",
+    "    sub2 = axes[1].scatter(\n",
+    "        data_pos_inclusive['X'][filter],\n",
+    "        data_pos_inclusive['Z'][filter],\n",
+    "        c=cvals,\n",
+    "        cmap=colors,\n",
+    "        zorder=2\n",
+    "    )\n",
+    "    axes[1].scatter(0,0,100,marker='*',c='black',zorder=3)\n",
+    "    axes[1].scatter(0,0,45,marker='*',c='gold',label='Sun',zorder=4)\n",
+    "    axes[1].scatter(8.186,0,45,marker='X',c='black',label='Galactic Centre, ~8.186 kpc from Sun',zorder=4)\n",
+    "    axes[1].vlines(8.186,-20,25, color='black',linestyle='--', label='Galactic Centre axis', zorder=0)\n",
+    "    axes[1].grid(axis='x',zorder=0)\n",
+    "    axes[1].xaxis.set_major_locator(FixedLocator(np.arange(-12,24,5)))\n",
+    "\n",
+    "    axes[1].set_title(r'MW Edge-On 0$\\degree$')\n",
+    "    axes[1].set_xlabel(\"X [kpc]; Toward galactic centre\")\n",
+    "    axes[1].set_ylabel(\"Z [kpc]; Toward galactic north pole\")\n",
+    "\n",
+    "\n",
+    "    sub3 = axes[2].scatter(\n",
+    "        data_pos_inclusive['Y'][filter],\n",
+    "        data_pos_inclusive['Z'][filter],\n",
+    "        c=cvals,\n",
+    "        cmap=colors,\n",
+    "        zorder=2\n",
+    "    )\n",
+    "    axes[2].scatter(0,0,100,marker='*',c='black',zorder=3)\n",
+    "    axes[2].scatter(0,0,45,marker='*',c='gold',label='Sun',zorder=4)\n",
+    "    axes[2].vlines(0,-20,25, color='black',linestyle='--', label='Galactic Centre axis', zorder=0)\n",
+    "    axes[2].grid(axis='x',zorder=0)\n",
+    "\n",
+    "    axes[2].set_title(r'MW Edge-On -90$\\degree$')\n",
+    "    axes[2].set_xlabel('Y [kpc]; \"Toward galactic rotation\"')\n",
+    "    axes[2].set_ylabel(\"Z [kpc]; Toward galactic north pole\")\n",
+    "\n",
+    "    for ax in axes:\n",
+    "        ax.set_aspect('equal')\n",
+    "        ax.set_xlim(x_min, x_max)\n",
+    "        ax.set_ylim(y_min, y_max)\n",
+    "        if ax == axes[2]:\n",
+    "            ax.set_xlim(x_min-5, x_max-5)\n",
+    "            ax.xaxis.set_major_locator(FixedLocator(np.arange(-15,16,5)))\n",
+    "\n",
+    "    cbar = fig.colorbar(sub1, ax=axes, fraction=0.015)\n",
+    "    cbar.set_label('$v_{LSR}$ [km/s]')\n",
+    "    fig.subplots_adjust(right=0.87)\n",
+    "    \n",
+    "    if len(data_vel_inclusive[filter]) == len(data_vel_inclusive[~data_vel_inclusive['v_LSR'].isna()]):\n",
+    "        plt.suptitle(fr\"Globular Clusters: Coordinates and LSR velocities, All GCs ({len(data_vel_inclusive[filter])})\")\n",
+    "    elif len(data_vel_inclusive[filter]) == len(data_vel_inclusive[sigma1]):\n",
+    "        plt.suptitle(fr\"Globular Clusters: Coordinates and LSR velocities, 1$\\sigma$ GCs ({len(data_vel_inclusive[filter])})\")\n",
+    "    \n",
+    "    plt.show()\n",
+    "    n+=1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19374f60",
+   "metadata": {},
+   "source": [
+    "Red: Moving away from LSR <br><br>\n",
+    "Blue: Moving towards LSR<br><br>\n",
+    "In this limited analysis of rotational behavior we are not taking the Z-coordinate into account, which may affect the significance of our findings. \n",
+    "\n",
+    "The LSR velocity is basically the velocity the objects are moving away from or toward the sun, after adjusting for the sun's own velocity.\n",
+    "The LSR itself is the 'Local Standard of Rest', which means a frame of velocities where the motion of our stellar neighborhood around MW is assumed as rest.\n",
+    "\n",
+    "If every globular cluster had the same angular velocity as the sun, all LSR velocities (v_LSR) would be 0, and all colors would be grey. This is not how galactic rotation manifests in reality, however, we would expect objects at similar radii from the galactic centre as the sun to have a very small v_LSR. \n",
+    "Furthermore, since the rotational velocities flatten out and are approximately constant for radii above ~5 kpc, we would expect objects at larger radii behind the sun in the galactic direction of rotation to have a slightly positive v_LSR (red color in the plot, moving away from the sun), and objects at larger radii \"in front of us\" to be approaching us (negative v_LSR, blue color).\n",
+    "Objects at small radii move increasingly faster the smaller their radius is within ~5 kpc, and so these GCs should exhibit opposite colors of those further out than the sun (blue in the plot).\n",
+    "Note that objects crossing the line that goes through the sun and the galactic centre in the leftmost plot should be (approximately) grey-colored as their velocity is completely orthogonal to the  line of sight and v_LSR should therefore be approximately 0.\n",
+    "\n",
+    "\n",
+    "The 1-sigma method is intrinsically flawed, because it could have been the case that 99% of GCs are accreted. The very method always excludes ~68% of elements based on the statistical behaviors of all elements. We do find the most radically different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b7574a",
+   "metadata": {},
+   "source": [
+    "data_pos_inclusive['ID'][sigma1]\n",
+    "\n",
+    "\n",
+    "**Sigma1 test on v_LSR compared to truth-values of accreted(0)/in-situ(1). About 50/50, no correlation.**\n",
+    "\n",
+    "1851 0\n",
+    "1904 0\n",
+    "3201 0\n",
+    "362  0\n",
+    "4833 1\n",
+    "6101 0\n",
+    "6144 1\n",
+    "6205 1\n",
+    "6535 1\n",
+    "6541 1\n",
+    "6584 0\n",
+    "6681 1\n",
+    "6809 1\n",
+    "6934 0\n",
+    "6981 0\n",
+    "7099 1\n",
+    "\n",
+    "\n",
+    "**Sigma1 test on v_LSR_proj compared to truth-values of accreted(0)/in-situ(1). About 50/50, no correlation.**\n",
+    "2     NGC 1851  0\n",
+    "3     NGC 1904  0\n",
+    "7     NGC 3201  0\n",
+    "8      NGC 362  0\n",
+    "14    NGC 5272  0\n",
+    "16    NGC 5466  0\n",
+    "22    NGC 6101  0  \n",
+    "27    NGC 6205  1\n",
+    "54    NGC 6934  0\n",
+    "55    NGC 6981  0\n",
+    "58    NGC 7099  1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "220089aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Code for grabbing individual GCs from the plot\n",
+    "\n",
+    "#filter = (data_vel_inclusive['v_LSR'] > 300)\n",
+    "#filter = (data_vel_inclusive['ID'] == 'NGC 6101')\n",
+    "\n",
+    "pos1_filter = (data_pos_inclusive['X'] > 0) & (data_pos_inclusive['X'] < 2) & (data_pos_inclusive['Y'] > -6) & (data_pos_inclusive['Y'] < -4)\n",
+    "pos2_filter = (data_pos_inclusive['X'] > 2) & (data_pos_inclusive['X'] < 5) & (data_pos_inclusive['Y'] > -10) & (data_pos_inclusive['Y'] < -6)\n",
+    "print(data_pos_inclusive[['ID','X','Y','Z']][pos1_filter])\n",
+    "print(data_pos_inclusive[['ID','X','Y','Z']][pos2_filter])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
