Final code for video

--- a/deprecated.ipynb
+++ b/deprecated.ipynb
@@ -87,6 +87,24 @@
     "# # Render the plot.\n",
     "# plotly.offline.iplot(plot_figure)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6960caab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mass_calculation =np.log10( (np.power(data_merged['v_e0'] *1000, 2)) * (data_merged['R_G']*30900000000000000)/(2*0.000000000066743*1.989E+30) )\n",
+    "\n",
+    "\n",
+    "# plt.scatter(data_merged['Age_y'], mass_calculation - data_merged[\"Mstar\"], marker='*')\n",
+    "\n",
+    "# # Axes\n",
+    "# plt.title('Difference in Calculated and Provided Mass vs Age') # Title of graph\n",
+    "# plt.xlabel('$Age$, $Gyr$') # x-axis label\n",
+    "# plt.ylabel('$Mstar - Calculated Mass$, $Log(M_x/M_sun)$') # y-axis label"
+   ]
   }
  ],
  "metadata": {
